@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam monochrome true

class Main extends IndexingEngine {
  - LOG_FILE : Path
  + main(args: String[]) : void
  - scheduleGuiRefresh() : void
}

class GUI extends JFrame {
  - myGui : GUI
  - listModel : DefaultListModel<String>
  - hostList : JList<String>
  - selectedLogDisplay : JTextPane
  - liveLogDisplay : JTextPane
  - searchField : JTextField
  - pivotBox : JComboBox<String>
  - liveLogsBuffer : List<LogObject>
  + getMyGui() : GUI
  + GUI()
  - applySidebarFilter() : void
}

class IndexingEngine {
  ~ HostIndex : HashMap<String, List<LogObject>>
  ~ TimeIndex : TreeMap<LocalDate, TreeMap<LocalTime, List<LogObject>>>
  + tailFile(file: Path) : void
  + getLogsBySeverity(level: String) : List<LogObject>
  + getLogsByCategory(category: String) : List<LogObject>
}

class LogObject {
  - timestamp : long
  - source : String
  - severity : String
  - category : String
  - message : String
  + getTimestamp() : long
  + getSource() : String
  + getSeverity() : String
  + getCategory() : String
  + getMessage() : String
  + toString() : String
}

class JSONobject {
  - timestamp : long
  - source : String
  - level : String
  - message : String
  + getTimestamp() : long
  + getSource() : String
  + getLevel() : String
  + getMessage() : String
}

interface LogParser {
  + canParse(rawline: String) : boolean
  + parse(rawline: String) : LogObject
}

class SyslogParser implements LogParser {
  - LOG_PATTERN : Pattern
  + canParse(rawline: String) : boolean
  + parse(rawline: String) : LogObject
}

class YOLOparser {
}

Main --> GUI : instantiates
Main --> IndexingEngine : starts tail thread
IndexingEngine -> SyslogParser : uses
SyslogParser -> LogObject : creates
SyslogParser -> GUI : appends live logs
IndexingEngine o--> "0..*" LogObject : stores in maps
GUI --> IndexingEngine : queries data

@enduml